--- a/app/src/main/res/layout/row_item.xml
+++ b/app/src/main/res/layout/row_item.xml
@@ -2,7 +2,8 @@
 
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools">
+        xmlns:tools="http://schemas.android.com/tools"
+        >
 
     <data>
         <variable name="rowItem"
@@ -30,20 +31,20 @@
                     android:textSize="18sp"
                     android:id="@+id/tv_title"
                     tools:background="#aaeaea"
-                    tools:text="Test"
                     app:layout_constraintStart_toStartOf="parent"
+                    rowText="@{rowItem.title}"
+                    defaultText="@{@string/no_title}"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     android:textColor="@color/textPrimary"
-                    android:text="@{rowItem.title}"
                     android:layout_height="wrap_content" app:layout_constraintHorizontal_bias="0.533"/>
 
 
             <androidx.appcompat.widget.AppCompatTextView
                     android:layout_width="0dp"
-                    android:text="@{rowItem.description}"
                     android:textSize="14sp"
-                    tools:text="Test"
+                    rowText="@{rowItem.description}"
+                    defaultText="@{@string/no_description}"
                     app:layout_constraintVertical_bias="0"
                     android:id="@+id/tv_desc"
                     app:layout_constraintStart_toStartOf="parent"
@@ -65,6 +66,7 @@
                     app:layout_constraintVertical_bias="0"
                     android:layout_marginStart="4dp"
                     setImagePath="@{rowItem.imageHref}"
+                    android:src="@drawable/ic_image_black_24dp"
                     tools:background="#47BEF5"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/tv_title"
