--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -24,34 +24,36 @@
                                                                app:layout_constraintTop_toTopOf="parent"
                                                                app:layout_constraintBottom_toBottomOf="parent"
                                                                android:layout_height="0dp">
-            <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/rv_items"
-                    tools:itemCount="10"
-                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                    tools:listitem="@layout/row_item"
-                    app:layout_constraintStart_toStartOf="parent"
-                    tools:background="#D6A986"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    android:visibility="@{viewModel.noDataFound ? View.GONE : View.VISIBLE}"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"/>
 
-            <androidx.appcompat.widget.AppCompatTextView
-                    android:id="@+id/tv_no_data_found"
-                    android:text="@string/no_data_found"
-                    android:gravity="center"
-                    android:textSize="20sp"
-                    android:visibility="@{viewModel.noDataFound ? View.VISIBLE : View.GONE}"
-                    android:textColor="@color/textPrimary"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"/>
+            <FrameLayout android:layout_width="match_parent" android:layout_height="match_parent">
+                <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/rv_items"
+                        tools:itemCount="10"
+                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                        tools:listitem="@layout/row_item"
+                        app:layout_constraintStart_toStartOf="parent"
+                        tools:background="#D6A986"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        android:visibility="@{viewModel.noDataFound ? View.GONE : View.VISIBLE}"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"/>
 
+                <androidx.appcompat.widget.AppCompatTextView
+                        android:id="@+id/tv_no_data_found"
+                        android:text="@string/no_data_found"
+                        android:textSize="20sp"
+                        android:gravity="center"
+                        android:textColor="@color/textPrimary"
+                        android:visibility="@{viewModel.noDataFound ? View.VISIBLE : View.GONE}"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"/>
+            </FrameLayout>
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
