--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -19,7 +19,7 @@
         <androidx.swiperefreshlayout.widget.SwipeRefreshLayout android:layout_width="0dp"
                                                                android:id="@+id/swipe_to_refresh"
                                                                app:layout_constraintStart_toStartOf="parent"
-                                                               app:setRefreshing="@{viewModel.isLoading}"
+                                                               setRefreshing="@{viewModel.isLoading}"
                                                                app:layout_constraintEnd_toEndOf="parent"
                                                                app:layout_constraintTop_toTopOf="parent"
                                                                app:layout_constraintBottom_toBottomOf="parent"
